--- a/mask_rcnn/mask_rcnn.ipynb
+++ b/mask_rcnn/mask_rcnn.ipynb
@@ -1537,7 +1537,7 @@
    "outputs": [],
    "source": [
     "# save model\n",
-    "model.keras_model.save_weights(\"my_model_big_20210929_big_tiles.h5\")"
+    "model.keras_model.save_weights(\"mask_rcnn_big_tiles.h5\")"
    ]
   },
   {
@@ -1603,7 +1603,7 @@
    "outputs": [],
    "source": [
     "# Load previously trained weights \n",
-    "pred_model.load_weights(\"/content/my_model_big_20210929_big.h5\", by_name=True)"
+    "pred_model.load_weights(\"/content/mask_rcnn_big_tiles.h5\", by_name=True)"
    ]
   },
   {
